overflow-bug-fix

--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -5,6 +5,7 @@ body
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
+    width: 100%;
     // background-color: rgba($color: #c39ea0, $alpha: .5);
     background: #FC354C;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);  /* Chrome 10-25, Safari 5.1-6 */
@@ -35,7 +36,7 @@ body
     {
         position: absolute;
         height: 500px;   
-        background: #FC354C;  /* fallback for old browsers */
+        background: #bb4c59;  /* fallback for old browsers */
         background: -webkit-linear-gradient(to right, #0ABFBC, hsl(353, 97%, 60%));  /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to right, #0ABFBC , #f58290); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
                                  
@@ -48,7 +49,7 @@ body
         align-items: center;
         flex-direction: column;
         text-align: center;
-        transform: translateX(100%);
+        transform: translateY(-150%);
     }
 
     .nav-links li
@@ -135,12 +136,12 @@ body
     from 
     {
         opacity: 0;
-        transform: translateX(50%);
+        transform: translateY(-50%);
     }    
     to
     {
         opacity: 1;
-        transform: translateX(0%);
+        transform: translateY(0%);
     }
 }
 
@@ -149,12 +150,12 @@ body
     from 
     {
         opacity: 1;
-        transform: translateX(0%);
+        transform: translateY(0%);
     }    
     to
     {
         opacity: 0;
-        transform: translateX(50%);
+        transform: translateY(-50%);
     }
 }
 
