--- a/sass/top-mid.scss
+++ b/sass/top-mid.scss
@@ -1,11 +1,14 @@
 @import './variable';
 
+
 .top-mid
 {
     position: relative;
     z-index: 0;
-    height: 1000px;
+    height: 550px;
     width: 100%;
+    overflow-x: hidden;
+    background-color: rgba($color: black, $alpha: .3);
     // background: #BBD2C5;  /* fallback for old browsers */
     // background: -webkit-linear-gradient(to right, #536976, #BBD2C5);  /* Chrome 10-25, Safari 5.1-6 */
     // background: linear-gradient(to right, #536976, #BBD2C5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -19,7 +22,7 @@
         background: url('../assets/images/img1.jpg');
         background-size: cover;
         background-position: center;
-        left: 45%;
+        // left: 45%;
         top: -200px;
         box-shadow: 5px 5px 10px rgba($color: black, $alpha: .5);
     }
@@ -31,7 +34,7 @@
         width: 560px;
         // background-color: grey;
         top: -750px;
-        left: 12%;
+        // left: 12%;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -40,9 +43,24 @@
         div
         {
             position: relative;
-            height: 230px;
-            width: 270px;
+            height: 170px;
+            width: 210px;
             background-color: white;
+            padding: 30px;
+
+            h3
+            {
+                text-transform: uppercase;
+                font-family: $fontm1;
+                font-style: italic;
+            }
+
+            p
+            {
+                line-height: 1.5;
+                word-spacing: 2px;
+                margin-top: 20px;
+            }
         }
     }
 }
