--- a/sass/top.scss
+++ b/sass/top.scss
@@ -1,9 +1,11 @@
 @import './variable';
 
+
 .top
 {
     height: 1000px;
     width: 100%;
+    // background-color: rgba($color: white, $alpha: 1.0);
     // background: #f2709c;  /* fallback for old browsers */
     // background: -webkit-linear-gradient(to right, #ff9472, #f2709c);  /* Chrome 10-25, Safari 5.1-6 */
     // background: linear-gradient(to right, #ff9472, #f2709c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -19,7 +21,7 @@
     padding: 30px 50px; 
     padding-top: 60px;
     z-index: 1;
-    left: 12%;
+    left: 0;
 
     &-img
     {
@@ -38,8 +40,8 @@
         position: relative;
         height: 450px;
         top: -580px;
-        left: 475px;
-        right: 0;
+        // left: 475px;
+        // right: 0;
         width: 380px;
         background-color: $col5;
     }
